--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LittlePidan</title>
+    <meta name="title" content="小皮蛋一歲啦 | LittlePiDan Happy Birthday" />
+    <meta name="description" content="歐小蛋要一歲啦！" />
+    <title>小皮蛋一歲啦 | LittlePiDan Happy Birthday</title>
   </head>
   <body>
     <div id="app"></div>
